fix(backend): make cors origins configurable and inject droplet ip in production to fix cors preflight block